feat: Complete Zoom Contact Center inbox management implementation
- Add comprehensive Contact Center inbox CRUD operations
- Implement correct DELETE endpoint for bulk inbox deletion
- Add Tyler Pratt as access member to all color inboxes
- Successfully delete all 10 color inboxes with proper API parameters
- Update API documentation with correct endpoint specifications
- Add new example scripts for inbox management operations
- Fix API client methods for inbox access member management

Key improvements:
- Fixed DELETE /contact_center/inboxes endpoint implementation
- Added delete_all_messages_and_inboxes parameter handling
- Updated perfectedendpoints.md with complete API documentation
- Added npm scripts for new inbox management operations

--- a/package.json
+++ b/package.json
@@ -21,7 +21,20 @@
     "remove-all-queue-members": "node examples/remove-all-queue-members.js",
     "force-remove-members": "node examples/force-remove-members.js",
     "change-queue-extension": "node examples/change-queue-extension.js",
-    "manage-car-brands-skills": "node examples/manage-car-brands-skills.js"
+    "manage-car-brands-skills": "node examples/manage-car-brands-skills.js",
+    "create-user-tyler-pratt": "node examples/create-user-tyler-pratt.js",
+    "enable-user-phone-6969": "node examples/enable-user-phone-6969.js",
+    "check-and-set-extension": "node examples/check-and-set-extension.js",
+    "check-phone-licenses": "node examples/check-phone-licenses.js",
+    "assign-phone-license": "node examples/assign-phone-license.js",
+    "deactivate-user-tyler-pratt": "node examples/deactivate-user-tyler-pratt.js",
+    "create-contact-center-flow": "node examples/create-contact-center-flow.js",
+    "test-flow-endpoint": "node examples/test-flow-endpoint.js",
+    "create-contact-center-inbox": "node examples/create-contact-center-inbox.js",
+    "create-color-inboxes": "node examples/create-color-inboxes.js",
+    "add-tyler-to-color-inboxes": "node examples/add-tyler-to-color-inboxes.js",
+    "delete-color-inboxes": "node examples/delete-color-inboxes.js",
+    "check-contact-center-users": "node examples/check-contact-center-users.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
